# backend

./: pyproject.toml
config/: settings.py  urls.py
siteifc/: admin.py  apps.py  models.py  serializers.py  views.py
siteifc/migrations/: 0001_initial.py  0002_atendimento_data_atendimento_hora_eventos_data_and_more.py  0002_comissao_comite_grupo_de_estudos_nucleos_tipo_user_and_more.py  0003_rename_grupo_de_estudos_grupo_estudo_and_more.py  0003_reservar_atendimentos_alter_reservar_atendimento.py  0004_turma_vendas_turma.py
